# GolfApp

./: CMakeLists.txt  Hole.qml  Prompt.txt  main.cpp
